# ChangeLog for dev-ruby/minitest
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.43 2011/06/02 08:10:14 graaff Exp $

*minitest-2.2.2 (02 Jun 2011)

  02 Jun 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.2.2.ebuild:
  Version bump.

*minitest-2.2.1 (01 Jun 2011)

  01 Jun 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.2.1.ebuild:
  Version bump.

  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> minitest-2.0.2.ebuild:
  alpha stable

*minitest-2.1.0 (13 Apr 2011)

  13 Apr 2011; Hans de Graaff <graaff@gentoo.org> +minitest-2.1.0.ebuild:
  Version bump.

  13 Apr 2011; Hans de Graaff <graaff@gentoo.org> -minitest-1.6.0.ebuild,
  -minitest-1.7.2.ebuild:
  Remove old versions.

  27 Mar 2011; Brent Baude <ranger@gentoo.org> minitest-2.0.2.ebuild:
  Marking minitest-2.0.2 ppc stable for bug 354481

  07 Mar 2011; Raúl Porcel <armin76@gentoo.org> minitest-1.7.2.ebuild,
  minitest-2.0.2.ebuild, minitest-2.0.2-r1.ebuild:
  Add ~s390/~sh

  01 Mar 2011; Jeroen Roovers <jer@gentoo.org> minitest-2.0.2.ebuild:
  Stable for HPPA (bug #354481).

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> minitest-2.0.2.ebuild:
  ia64/sparc stable wrt #354481

  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> minitest-2.0.2.ebuild:
  Stable on amd64 wrt bug #354609

  15 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  minitest-2.0.2.ebuild:
  x86 stable wrt bug #354481

*minitest-2.0.2-r1 (13 Feb 2011)

  13 Feb 2011; Hans de Graaff <graaff@gentoo.org> minitest-2.0.2.ebuild,
  +minitest-2.0.2-r1.ebuild:
  Revision bump to create a stable candidate with ree18 and without ruby19.

  11 Feb 2011; Markos Chandras <hwoarang@gentoo.org> minitest-1.7.2.ebuild:
  Stable on amd64 wrt bug #354481

  11 Feb 2011; Hans de Graaff <graaff@gentoo.org> minitest-1.7.2.ebuild:
  Drop ruby19 to create a stable candidate.

*minitest-2.0.2 (28 Dec 2010)
