@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/minitest
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.43 2011/06/02 08:10:14 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.44 2011/06/18 08:17:56 graaff Exp $
+
+  18 Jun 2011; Hans de Graaff <graaff@gentoo.org> -minitest-2.0.2-r1.ebuild,
+  -minitest-2.2.1.ebuild:
+  Remove old versions.
 
 *minitest-2.2.2 (02 Jun 2011)
 
